# option_spx

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DAILY_WORKFLOW.md  DESIGN.md  DEVELOPER.md  METHODOLOGY.md  Makefile  PLANNER.md  PROJECT_STATUS.md  PROMPTS.md  QUANT_RESEARCHER.md  RESEARCH_LOG.md  REVIEW_TEMPLATE.md  SERVER_RUNTIME.md  STRATEGY_STATE.md  SYNC_CHECKLIST.md  com.spxstrat.ops_heartbeat.plist  com.spxstrat.q041_chain_sanity.plist  com.spxstrat.q041_t2_paper_signals.plist  com.spxstrat.q041_t3_earnings_check.plist  com.spxstrat.q085_s2bps.plist  com.spxstrat.q090_structure.plist  com.spxstrat.regime_flags_refresh.plist  com.spxstrat.web_nightly_restart.plist  main.py  pyproject.toml
.claude/: settings.json
.githooks/: post-commit
backtest/: attribution.py  engine.py  experiment.py  metrics_portfolio.py  portfolio.py  pricer.py  q042_engine.py  registry.py  research_views.py  run_bootstrap_ci.py  run_conditional_pnl.py  run_event_study.py  run_event_study_analysis.py  run_matrix_audit.py  run_matrix_bootstrap.py  run_oos_validation.py  run_shock_analysis.py  run_strategy_audit.py  run_trend_ablation.py  shock_engine.py
data/: backtest_results_cache.json  backtest_results_cache.tieout2-pre.json  backtest_stats_cache.json  backtest_trades_3y_2026-04-29.csv  bcd_filter_shadow.jsonl  capital_flows.jsonl  closed_trades.jsonl  es_backtest_cache.json  market_cache.py  matrix_consistency_audit_2026-05-26.csv  overlay_f_alert_latest.txt  overlay_f_shadow.jsonl  q041_backtest_cache.json  q041_paper_trade_config.json  q041_portfolio_attribution_latest.json  (+10 more)
(+1729 files in other folders)
