[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spx-strat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "curl_cffi<0.15",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "python-telegram-bot>=20",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "flask>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
