[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spx-strat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "lxml>=4.9",
    "curl_cffi<0.15",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "python-telegram-bot>=20",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "flask>=3.0",
    "waitress>=3.0",
    "pyarrow>=15",
    "pyetrade>=2.1.1",
    "pandas_market_calendars>=4.4",
    "openpyxl>=3.1",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
]

[tool.setuptools.packages.find]
where = ["."]
